--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "mysql2": "^3.15.1",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
+    "solapi": "^5.5.2",
     "typeorm": "^0.3.27",
     "xlsx": "^0.18.5"
   },
